So much recode
With some classes that now use singleton pattern and some more changes in the code.